# concert-calendar

concert-calendar/: pyproject.toml
concerts/: quotes-shows.html  shows.json
concerts/concerts/: middlewares.py  settings.py
concerts/concerts/spiders/: brooklyn_bowl.py
